...
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="model">Model</string>
    <string name="item_name">Item Name</string>
    <string name="tag_name">Tag Name</string>
    <string name="remove_filter">Remove Filters</string>
    <string name="search">Search</string>
    <string name="add_item">Add Item</string>
    <string name="filter">filter</string>
    <string name="delete_item">delete item</string>
    <string name="filter_date_button_text">Filter</string>
    <string name="date_in_future">Date is in the future!</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="totalValueTitle">Total Value: $%1$s</string>
    <string name="sort_readable">Sort</string>
...
    <string name="select_images_to_delete">Select Images To Delete...</string>
    <string name="add_from_barcode">Add From Barcode</string>
    <string name="add_from_barcode_description">Add From Barcode</string>
    <string name="barcode_optional">Barcode (Optional)</string>
    <string name="scan_barcode_text">Scan Barcode</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="add_element">Add Element</string>
    <string name="choose_existing_photo">Choose Existing Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="sort_by_description">Sort by Description</string>
    <string name="description_t">Description</string>
    <string name="sort_by_make">Sort by Make</string>
    <string name="make_t">Make</string>
...
    <string name="select_mode_add_tags">Add Tags</string>
    <string name="delete">Delete</string>
    <string name="default_web_client_id">934777894439-akkij981rl0rvsehm3623j45s1e7rruq.apps.googleusercontent.com</string>
    <string name="lets_sign_in">Let\'s get you signed in.</string>
    <string name="sign_out">Sign Out</string>
    <string name="currently_signed_in_as">Currently signed in as:</string>
    <string name="add_new_tag">Add Tag</string>

</resources>
