<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/description"
        android:title="@string/description"
        android:contentDescription="@string/description"/>
    <item android:id="@+id/make_menu"
        android:contentDescription="@string/make"
        android:title="@string/make">
        <!-- make submenu -->
        <menu></menu>
    </item>
    <item android:id="@+id/tag_menu"
        android:contentDescription="@string/tagsTitle"
        android:title="@string/tagsTitle">
        <!-- make submenu -->
        <menu></menu>
    </item>

    <item
        android:id="@+id/date"
        android:contentDescription="@string/Date"
        android:title="@string/Date"/>
</menu>