...
    android:padding="16dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tag_name"
        android:id="@+id/tag_name_text"
        android:inputType="textPersonName" />
</LinearLayout>


